# internal/handler/user.go
@@ -1,10 +1,11 @@
 package handler
 
 import (
-	"aphrodite-go/api/v1"
+	v1 "aphrodite-go/api/v1"
 	"aphrodite-go/internal/service"
-	"github.com/gin-gonic/gin"
 	"net/http"
+
+	"github.com/gin-gonic/gin"
 )
 
 type UserHandler struct {
@@ -19,7 +20,7 @@ func NewUserHandler(handler *Handler, userService service.UserService) *UserHand
 	}
 }
 
-// GetProfile godoc
+// GetUser godoc
 // @Summary 获取用户信息
 // @Schemes
 // @Description
@@ -29,14 +30,14 @@ func NewUserHandler(handler *Handler, userService service.UserService) *UserHand
 // @Security Bearer
 // @Success 200 {object} v1.GetProfileResponse
 // @Router /user [get]
-func (h *UserHandler) GetProfile(ctx *gin.Context) {
+func (h *UserHandler) GetUser(ctx *gin.Context) {
 	userCode := GetUserCodeFromCtx(ctx)
 	if userCode == "" {
 		v1.HandleError(ctx, http.StatusUnauthorized, v1.ErrUnauthorized, nil)
 		return
 	}
 
-	user, err := h.userService.GetProfile(ctx, userCode)
+	user, err := h.userService.GetUser(ctx, userCode)
 	if err != nil {
 		v1.HandleError(ctx, http.StatusInternalServerError, err, nil)
 		return
@@ -45,7 +46,7 @@ func (h *UserHandler) GetProfile(ctx *gin.Context) {
 	v1.HandleSuccess(ctx, user)
 }
 
-// UpdateProfile godoc
+// UpdateUser godoc
 // @Summary 修改用户信息
 // @Schemes
 // @Description
@@ -56,16 +57,41 @@ func (h *UserHandler) GetProfile(ctx *gin.Context) {
 // @Param request body v1.UpdateProfileRequest true "params"
 // @Success 200 {object} v1.Response
 // @Router /user [put]
-func (h *UserHandler) UpdateProfile(ctx *gin.Context) {
+func (h *UserHandler) UpdateUser(ctx *gin.Context) {
 	userCode := GetUserCodeFromCtx(ctx)
 
-	var req = new(v1.UpdateProfileRequest)
+	var req = new(v1.UpdateUserRequest)
 	if err := ctx.ShouldBindJSON(req); err != nil {
 		v1.HandleError(ctx, http.StatusBadRequest, v1.ErrBadRequest, nil)
 		return
 	}
 
-	if err := h.userService.UpdateProfile(ctx, userCode, req); err != nil {
+	if err := h.userService.UpdateUser(ctx, userCode, req); err != nil {
+		v1.HandleError(ctx, http.StatusInternalServerError, v1.ErrInternalServerError, nil)
+		return
+	}
+
+	v1.HandleSuccess(ctx, nil)
+}
+
+// DeleteUser godoc
+// @Summary 修改用户信息
+// @Schemes
+// @Description
+// @Tags 用户模块
+// @Accept json
+// @Produce json
+// @Security Bearer
+// @Success 200 {object} v1.Response
+// @Router /user [delete]
+func (h *UserHandler) DeleteUser(ctx *gin.Context) {
+	userCode := GetUserCodeFromCtx(ctx)
+	if userCode == "" {
+		v1.HandleError(ctx, http.StatusUnauthorized, v1.ErrUnauthorized, nil)
+		return
+	}
+
+	if err := h.userService.DeleteUser(ctx, userCode); err != nil {
 		v1.HandleError(ctx, http.StatusInternalServerError, v1.ErrInternalServerError, nil)
 		return
 	}
